--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <link rel="stylesheet" href="css/libs.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/jquery.imagesloader.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -239,7 +240,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/public7.jpeg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat0.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -406,7 +407,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu1.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat1v4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -470,7 +471,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat2v2.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -534,7 +535,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat3.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -598,7 +599,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -700,7 +701,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/no_image.png" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -744,7 +745,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/9d92a9fe-013e-412e-9e5e-c964d2bb410a.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
@@ -788,7 +789,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/82e4b0b9-c96c-4a15-ae61-4e6e6b79d7a3.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li class="star0">
@@ -833,7 +834,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/92e9d9c0-6511-4915-9c78-0310cc3fa713.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -878,7 +879,7 @@
                       <use xlink:href="img/sprite.svg#heart"></use>
                     </svg>
                   </a>
-                  <a href="publication.html" class="product-card__img"><img src="img/public1.jpeg" alt=""></a>
+                  <a href="publication.html" class="product-card__img"><img src="img/349a58a9-efba-422f-af08-07636c1e7eac.jpeg" alt=""></a>
                   <div class="product-card__body">
                     <ul class="list-rating">
                       <li>
@@ -1182,6 +1183,8 @@
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="js/jquery.imagesloader-1.0.1.js"></script>
 <script src="js/common.js"></script>
 
 </body>
