--- a/app/mail-list.html
+++ b/app/mail-list.html
@@ -39,7 +39,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <link rel="stylesheet" href="css/libs.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/jquery.imagesloader.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -243,7 +244,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/public7.jpeg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat0.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -410,7 +411,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu1.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat1v4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -474,7 +475,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat2v2.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -538,7 +539,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat3.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -602,7 +603,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -680,7 +681,7 @@
             </div>
             <ul class="user-menu">
               <li><a href="#">Mein Konto</a></li>
-              <li><a href="edit-password.html">Konto verwalten</a></li>
+              <li><a href="manage-account.html">Konto verwalten</a></li>
               <li><a href="mail-list.html">Nachrichten</a></li>
               <li><a href="profile-edit.html">Profil verwalten</a></li>
               <li><a href="product-list.html">Publikationen verwalten </a></li>
@@ -906,6 +907,8 @@
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="js/jquery.imagesloader-1.0.1.js"></script>
 <script src="js/common.js"></script>
 
 </body>
