--- a/app/profile-edit.html
+++ b/app/profile-edit.html
@@ -39,7 +39,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
-  <link rel="stylesheet" href="css/libs.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/jquery.imagesloader.css">
   <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -243,7 +244,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/public7.jpeg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat0.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -410,7 +411,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu1.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat1v4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -474,7 +475,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat2v2.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -538,7 +539,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat3.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -602,7 +603,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -680,7 +681,7 @@
             </div>
             <ul class="user-menu">
               <li><a href="#">Mein Konto</a></li>
-              <li><a href="edit-password.html">Konto verwalten</a></li>
+              <li><a href="manage-account.html">Konto verwalten</a></li>
               <li><a href="mail-list.html">Nachrichten</a></li>
               <li><a href="profile-edit.html">Profil verwalten</a></li>
               <li><a href="product-list.html">Publikationen verwalten </a></li>
@@ -689,7 +690,9 @@
           </div>
           <div class="col-12 col-lg-9">
             <div class="row">
-              <div class="col-12 col-lg-5"><h1>Profil verwalten</h1></div>
+              <div class="col-12 col-lg-5"><h1>Profil verwalten <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                        data-content="And here's some amazing content. It's very engaging. Right?">?
+              </button></h1></div>
 
               <div class="col-12 col-lg-7">
                 <div class="btn-group">
@@ -741,14 +744,16 @@
                         <div class="form-group">
                           <div class="row">
                             <div class="col-12">
-                              <h3 class="card-title">Logo</h3>
+                              <h3 class="card-title">Logo <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                  data-content="And here's some amazing content. It's very engaging. Right?">?
+                              </button></h3>
                             </div>
 
                             <div class="col-12">
                               <div class="card-body box-profile">
                                 <div class="text-center">
                                   <img class="profile-user-img img-fluid img-circle"
-                                       src="img/public13.jpeg">
+                                       src="img/public13.jpeg" alt="">
                                 </div>
                               </div>
                             </div>
@@ -776,7 +781,9 @@
                         <div class="form-group">
                           <div class="row">
                             <div class="col-12">
-                              <h3 class="card-title">Angaben zum Profil</h3>
+                              <h3 class="card-title">Angaben zum Profil <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                                data-content="And here's some amazing content. It's very engaging. Right?">?
+                              </button></h3>
                             </div>
                             <div class="col-12"><label>Beschreibung:</label></div>
                             <div class="col-12">
@@ -807,7 +814,9 @@
                       <div class="form-profile-box">
                         <div class="form-group">
                           <div class="row">
-                            <div class="col-12"><h3 class="card-title">Weitere Angaben</h3></div>
+                            <div class="col-12"><h3 class="card-title">Weitere Angaben <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                                               data-content="And here's some amazing content. It's very engaging. Right?">?
+                            </button></h3></div>
                             <div class="col-12 col-md-4"><label>Website:</label></div>
                             <div class="col-12 col-md-8"><input class="form-control" type="text" name="site_link" value="https://www.fairmaster.de"></div>
                           </div>
@@ -824,7 +833,9 @@
                       <div class="form-profile-box">
                         <div class="form-group">
                           <div class="row">
-                            <div class="col-12"><h3 class="card-title">Soziale Medien:</h3></div>
+                            <div class="col-12"><h3 class="card-title">Soziale Medien: <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                                               data-content="And here's some amazing content. It's very engaging. Right?">?
+                            </button></h3></div>
                             <div class="col-12 col-md-4"><label>Facebook:</label></div>
                             <div class="col-12 col-md-8"><input class="form-control" type="text" name="social_data[facebook]"
                                                                 value="https://www.fairmaster.de"></div>
@@ -877,7 +888,9 @@
                       <div class="form-profile-box">
                         <div class="form-group">
                           <div class="row">
-                            <div class="col-12"><h3 class="card-title">Sonstiges:</h3></div>
+                            <div class="col-12"><h3 class="card-title">Sonstiges: <button type="button" class="btn btn-lg btn-danger popover-btn" data-toggle="popover" title="Popover title"
+                                                                                          data-content="And here's some amazing content. It's very engaging. Right?">?
+                            </button></h3></div>
                             <div class="col-12 col-md-4"><label class="form-group-agb">Agb:</label></div>
                             <div class="col-12 col-md-8"><textarea class="form-control textarea-txt-agb" name="agb[de]">1111</textarea></div>
                           </div>
@@ -984,6 +997,8 @@
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="js/jquery.imagesloader-1.0.1.js"></script>
 <script src="js/common.js"></script>
 
 </body>
