--- a/app/contacts.html
+++ b/app/contacts.html
@@ -239,7 +239,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/public7.jpeg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat0.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -406,7 +406,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu1.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat1v4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -470,7 +470,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat2v2.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -534,7 +534,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat3.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -598,7 +598,7 @@
                   <div class="dropdown-menu">
                     <div class="dropdown-menu-wrapper">
                       <div class="dropdown-menu-col">
-                        <div class="dropdown-menu-img"><img src="img/menu2.jpg" alt=""></div>
+                        <div class="dropdown-menu-img"><img src="img/cat4.1.png" alt=""></div>
                       </div>
                       <div class="dropdown-menu-col">
                         <ul class="submenu">
@@ -819,6 +819,9 @@
         integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script src="js/jquery.imagesloader-1.0.1.js"></script>
 <script src="js/common.js"></script>
+
 </body>
 </html>
